[package]
authors = ["Hannu Hartikainen <hannu.hartikainen@gmail.com>"]
name = "pcd8544-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0"
embedded-hal-bus = "0.3.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
